# memory-vest

./: .env.template  Procfile  README.md  beginner_investing_companion_mvp_spec.md  memoryvest.db  pyproject.toml  render.yaml  report_output.txt  requirements.txt  schema.json
app/: config.py
app/api/: main.py
app/api/routers/: auth.py  chat.py  market.py  portfolio.py  profile.py  reports.py
app/cli/: commands_report.py  main.py
app/infra/: db.py  evermemos_client.py  market_client.py  news_client.py
app/models/: position.py  profile.py  report.py  watch_intent.py
app/prompts/: action_items_prompt.txt  extract_csv.txt  extract_profile.txt  generate_daily_report.txt  portfolio_review.txt
app/services/: delivery_service.py  extraction_service.py  market_data_service.py  memory_service.py  news_service.py  portfolio_service.py  profile_service.py  report_service.py  scheduler_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  config.js  index.css
frontend/src/components/: ActionItems.css  ActionItems.jsx  Chat.css  Chat.jsx  Dashboard.css  Dashboard.jsx  Login.css  Login.jsx  Reports.css  Reports.jsx  Settings.css  Settings.jsx
scripts/: demo.ps1  demo.py
