[project]
name = "memoryvest"
version = "0.1.0"
description = "Beginner-Friendly Investing Companion MVP using EverMemOS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.3",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "apscheduler>=3.10.4",
    "openai>=1.20.0",
    "email-validator>=2.1.1",
    "requests>=2.32.5",
    "yfinance>=1.2.0",
]

[project.scripts]
memoryvest = "app.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

