[project]
name = "memoryvest"
version = "0.1.0"
description = "Beginner-Friendly Investing Companion MVP using EverMemOS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "httpx>=0.28.1",
    "apscheduler>=3.11.0",
    "openai>=1.65.2",
    "email-validator>=2.2.0",
    "requests>=2.32.3",
    "yfinance>=0.2.54",
    "fastapi>=0.115.11",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.22",
]

[project.scripts]
memoryvest = "app.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

